# todo-rust

./: .env  Cargo.toml  README.md  test.db
.github/workflows/: rust.yml
migrations/: 0001_todos_table.sql  0002_todos_table.sql  0003_todos_table.sql  0004_todos_table.sql
src/: args.rs  crud_todo.rs  main.rs  structs.rs
