[package]
name = "todo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
indicatif = "0.17.7"
tokio = {version = "1.33.0", features = ["full"] }
sqlx = { version = "^0.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = "^0"
tabled = {version = "0.14.0", features = ["color"]}
